update product size table (add different stock for different size)